--- a/thesis/tex/SSVEP_BCI.tex
+++ b/thesis/tex/SSVEP_BCI.tex
@@ -2,9 +2,10 @@
 \chapter{SSVEP-based BCI for controlling a robot}
 \label{sec:SSVEP_BCI}
 
-The aim of this chapter is to describe the \gls{SSVEP}-based \gls{BCI} designed \dots. The \gls{BCI} is written in python 2.7 and the code is accessible from Github repository. See appendix~\ref{sec:bci_manual} for installation and usage instructions. The visual stimuli are designed using PsychoPy~\cite{psychopy}. \gls{CCA} algorithm is calculated using Scikit-Learn module~\cite{scikit-learn}. Most of other algorithms including \gls{FFT} are calculated using Scipy and Numpy modules~\cite{scipy}. The \gls{BCI} requires only Emotiv EPOC headset and a laptop computer, no specific hardware like digital signal processors or \glspl{LED} are used.
+The aim of this chapter is to describe the \gls{SSVEP}-based \gls{BCI} designed \dots. The \gls{BCI} is written in python 2.7 and the code is accessible from Github repository. See appendix~\ref{sec:bci_manual} for installation and usage instructions. The visual stimuli are designed using PsychoPy~\cite{psychopy}. \gls{CCA} algorithm is calculated using Scikit-Learn module~\cite{scikit-learn}. Most of other mathematical algorithms including \gls{FFT} are calculated using Scipy and Numpy modules~\cite{scipy}. The \gls{BCI} requires only Emotiv EPOC headset and a laptop computer, no specific hardware like digital signal processors or \glspl{LED} are used.
 
 \section{Signal pipeline}
+\label{sec:signal_pipeline}
 asd
 \section{Target identification}
 asd
