--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -348,6 +348,16 @@ Related work
 	language={English}
 }
 
+@article{feature_extraction,
+	title = {Review: Recent developement of signal processing algorithms for {SSVEP}-based Brain computer interfaces},
+	author = {Quan Liu and Kun Chen and Qingsong Ai and Sheng Quan Xie},
+	journal = {Journal of Medical and Biological Engineering},
+	volume = {34},
+	number = {4},
+	pages = {299--309},
+	year = {2014}
+}
+
 Emotiv EPOC
 
 @article{emotiv_hybrid,
@@ -465,6 +475,27 @@ Visual stimuli section
 }
 
 PSDA section
+
+@article{psda_snr1,
+	title = {{VEP}-Based Brain-Computer Interfaces: Time, Frequency, and Code Modulations},
+	author = {Guangyu Bin and Xiaorong Gao and Yijun Wang and Bo Hong and Shangkai Gao},
+	journal = {Computational Intelligence Magazine, IEEE},
+	volume = {4},
+	number = {4},
+	year = {2009},
+	url = {http://sccn.ucsd.edu/~yijun/pdfs/IEEECIM09.pdf},
+	pages = {22--26}
+}
+
+@article{psda_snr2,
+	title = {Brain-computer Interface based on the High-frequency Steady-state Visual Evoked Potential},
+	author = {WANG Yijun and WANG Ruiping and GAO Xiaorong and GAO Shangkai},
+	journal = {First International Conference on Neural Interface and Control Proceedings},
+	volume = {2005},
+	year = {2005},
+	pages = {37--39},
+	url = {http://ieeexplore.ieee.org.ezproxy.utlib.ee/stamp/stamp.jsp?tp=&arnumber=1499837&tag=1}
+}
 
 CCA section
 
