--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -22,6 +22,7 @@
 \newacronym{LRT}{LRT}{likelihood ratio test}
 \newacronym{MPCC}{MPCC}{multi-phase cycle coding}
 \newacronym{LED}{LED}{light-emitting diodes}
+\newacronym{SNR}{SNR}{signal-to-noise ratio}
 
 \newglossaryentry{neuron}{
 	name = neuron,
@@ -217,6 +218,14 @@
 }
 \newglossaryentry{frequency component}{
 	name = frequency component,
+	description = {--}
+}
+\newglossaryentry{interpolation}{
+	name = interpolation,
+	description = {--}
+}
+\newglossaryentry{zero padding}{
+	name = zero padding,
 	description = {--}
 }
 
