--- a/thesis/tex/abstract.tex
+++ b/thesis/tex/abstract.tex
@@ -2,7 +2,6 @@
 \chapter*{Control a Robot via VEP Using Emotiv EPOC}
 \section*{Abstract}
 \section*{Keywords}
-\normalsize{EEG, BCI, f-VEP, SSVEP, CCA, PSDA, FFT, DFT, electroencephalography}
-\section*{[Kommentaarid?]}
+\normalsize{EEG, BCI, f-VEP, SSVEP, CCA, PSDA, FFT, electroencephalography}
 \section*{Lühikokkuvõte}
 \section*{Võtmesõnad}
